# traversal

./: LICENSE  README.md  departage.cabal  stack.yaml  traversal.cabal
config/: config.dhall  grandpa.dhall  parent.dhall  sister.dhall  unary.dhall
scripts/: tag.sh  train-with-dev.sh
src/NLP/Departage/: CRF.hs  Config.hs  Core.hs  DepTree.hs  FeatConfig.hs  Hype.hs  Model.hs  Prob.hs  SharedTask.hs
src/NLP/Departage/CRF/: Mame.hs  Map.hs  SGD.hs
src/NLP/Departage/CRF/SGD/: Dataset.hs
src/NLP/Departage/Config/: Feat.hs
src/NLP/Departage/DepTree/: AsHype.hs  Cupt.hs
src/NLP/Departage/Parser/: Arc.hs  BottomUp.hs  Item.hs
src/NLP/Traversal/: CRF.hs  Config.hs  Core.hs  DepTree.hs  Hype.hs  Model.hs  Prob.hs  SharedTask.hs
src/NLP/Traversal/CRF/: Mame.hs  Map.hs  SGD.hs
src/NLP/Traversal/CRF/SGD/: Dataset.hs
src/NLP/Traversal/Config/: Feat.hs
src/NLP/Traversal/DepTree/: AsHype.hs  Cupt.hs
tools/: departage.hs  traversal.hs
