name:               departage
version:            0.1.0
synopsis:           TODO
description:
    TODO
license:            BSD2
license-file:       LICENSE
cabal-version:      >= 1.10
copyright:          Copyright (c) 2017 Jakub Waszczuk
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Natural Language Processing
homepage:           https://bitbucket.com/kawu/departage
build-type:         Simple

library
    hs-source-dirs: src
    build-depends:
        base                >= 4        && < 5
      , containers          >= 0.4      && < 0.6
--       , array               >= 0.5      && < 0.6
--       , binary              >= 0.7      && < 0.9
--       -- , vector              >= 0.11     && < 0.12

    exposed-modules:
        NLP.Departage.Hype

    -- other-modules:

    ghc-options: -Wall

source-repository head
    type: git
    location: https://kawu@bitbucket.org/kawu/departage.git
