name:               departage
version:            0.1.0
synopsis:           TODO
description:
    TODO
license:            BSD2
license-file:       LICENSE
cabal-version:      >= 1.10
copyright:          Copyright (c) 2017 Jakub Waszczuk
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Natural Language Processing
homepage:           https://bitbucket.com/kawu/departage
build-type:         Simple

library
    default-language:
        Haskell2010
    hs-source-dirs: src
    build-depends:
        base                >= 4        && < 5
      , containers          >= 0.5      && < 0.6
      , transformers        >= 0.5      && < 0.6
      , mtl                 >= 2.2      && < 2.3
      , data-memocombinators >= 0.5     && < 0.6
      , MemoTrie            >= 0.6      && < 0.7
      , data-lens-light     >= 0.1      && < 0.2
      , logfloat            >= 0.13     && < 0.14
      , primitive           >= 0.6      && < 0.7
      , vector              >= 0.11     && < 0.13
      , pipes               >= 4.3      && < 4.4
      , monad-primitive     >= 0.1      && < 0.2
--       , streaming           >= 0.2      && < 0.3
--       , array               >= 0.5      && < 0.6
      , binary              >= 0.7      && < 0.9
      , bytestring
      , filepath            >= 1.3      && < 1.5
      , temporary           >= 1.1      && < 1.3
      , random              >= 1.0      && < 1.2
      , text


    exposed-modules:
        NLP.Departage.DepTree
      , NLP.Departage.DepTree.AsHype
      , NLP.Departage.DepTree.Cupt
      , NLP.Departage.Parser.Item
      , NLP.Departage.Parser.Arc
      , NLP.Departage.Parser.BottomUp
      , NLP.Departage.Hype
      , NLP.Departage.CRF
      , NLP.Departage.CRF.Map
      , NLP.Departage.CRF.Mame
      , NLP.Departage.CRF.SGD
      , NLP.Departage.CRF.SGD.Dataset
      , NLP.Departage.Prob
      , NLP.Departage.SharedTask

    -- other-modules:

    ghc-options: -Wall

source-repository head
    type: git
    location: https://kawu@bitbucket.org/kawu/departage.git
