name:               traversal
version:            0.1.0
synopsis:           Multiword expression identification system
description:
    TRAVERSAL is a multiword expression identification system based on
    tree-structured conditional random fields.
license:            BSD2
license-file:       LICENSE
cabal-version:      >= 1.10
copyright:          Copyright (c) 2018 Jakub Waszczuk
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Natural Language Processing
homepage:           https://github.com/kawu/traversal
build-type:         Simple

library
    default-language:
        Haskell2010
    hs-source-dirs: src
    build-depends:
        base                >= 4        && < 5
      , containers          >= 0.5      && < 0.6
      , transformers        >= 0.5      && < 0.6
      , mtl                 >= 2.2      && < 2.3
      , data-memocombinators >= 0.5     && < 0.6
      , MemoTrie            >= 0.6      && < 0.7
      , data-lens-light     >= 0.1      && < 0.2
      , logfloat            >= 0.13     && < 0.14
      , primitive           >= 0.6      && < 0.7
      , vector              >= 0.11     && < 0.13
      , vector-th-unbox     >= 0.2      && < 0.3
      , pipes               >= 4.3      && < 4.4
      , monad-primitive     >= 0.1      && < 0.2
--       , streaming           >= 0.2      && < 0.3
--       , array               >= 0.5      && < 0.6
      , binary              >= 0.7      && < 0.9
      , bytestring
      , filepath            >= 1.3      && < 1.5
      , temporary           >= 1.1      && < 1.3
      , random              >= 1.0      && < 1.2
      , text                >= 1.2      && < 1.3
      , dhall               >= 1.11     && < 1.12
      , aeson               >= 1.2      && < 1.3
      , hashable            >= 1.2      && < 1.3
      , unordered-containers >= 0.2      && < 0.3


    exposed-modules:
        NLP.Traversal.DepTree
      , NLP.Traversal.DepTree.AsHype
      , NLP.Traversal.DepTree.Cupt
      , NLP.Traversal.Hype
      , NLP.Traversal.CRF
      , NLP.Traversal.CRF.Map
      , NLP.Traversal.CRF.Mame
      , NLP.Traversal.CRF.SGD
      , NLP.Traversal.CRF.SGD.Dataset
      , NLP.Traversal.Prob
      , NLP.Traversal.Core
      , NLP.Traversal.SharedTask
      , NLP.Traversal.Model

      , NLP.Traversal.Config
      , NLP.Traversal.Config.Feat

    -- other-modules:

    ghc-options: -Wall

source-repository head
    type: git
    location: https://github.com/kawu/traversal.git

executable traversal
    default-language:
        Haskell2010
    build-depends:
        traversal
      , base                    >= 4        && < 5
      , optparse-applicative    >= 0.12     && < 0.15
      , dhall                   >= 1.11     && < 1.12
      , filepath                >= 1.3      && < 1.5
      , text                    >= 1.2      && < 1.3
      , containers              >= 0.5      && < 0.6
    hs-source-dirs: tools
    main-is: traversal.hs
    ghc-options: -Wall -O2 -threaded -rtsopts
